# striker

./: .gitignore  README.md  debug_scraper.py  extract_flightaware.py  fetch_data.py  flightaware_extracted.json  main.py  network_log.txt  pyproject.toml  test_opensky.py
src/: drone.py  geometry.py  main.py  opensky_client.py  scraper.py
static/: index.html
tests/: test_main.py  test_scraper.py
