[project]
name = "flight-tracker"
version = "0.1.0"
description = "Track flight GTI657"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.49.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[dev-dependencies]
pytest = ">=8.3.0"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
